clang/test/BSC/Negative/Trait/GenericTrait/return_type_conflict/return_type_conflict.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {
  T foo(This* this, T a);
};

struct S{
  int x;
};

float struct S::foo(struct S* this, int a) {
  return this->x;
}

impl trait F<int> for struct S; // expected-warning {{incompatible function pointer types initializing 'int (*)(void *, int)' with an expression of type 'float (*)(void *, int)'}} 
                                // expected-error@-1 {{type of 'foo' conflicts with that of 'trait F<int>'}}